# styled-text

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: workflow.yml
python/: README.md  markdown.py  pyproject.toml  text_styler.py
python/src/styled_text/: markdown.py  text_styler.py
python/tests/: ast_tests.py  text_styler_tests.py
react/: README.md  StyledText.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
react/src/: StyledText.tsx  index.ts
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  markdown.ts  text_styler.ts
typescript/tests/: text_styler.test.ts
