[project]
name = "styled-text"
version = "0.1.2"
description = "Flexible library to convert a text with custom markup to html (or anything else)."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
reportUnusedCallResult = "none"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
