[project]
name = "styled-text"
version = "1.3.0"
description = "Flexible library to convert a text with custom markup to html (or anything else)."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
reportUnusedCallResult = "none"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
executionEnvironments = [
  { root = "src" }
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/styled_text"]
